transfer, verify banks
